--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
                 name: next-project
                 path: .
             
-            - name: Download Artifact on zip
-              uses: actions/download-artifact@v2
+            - name: Download Artifact 
+              uses: actions/download-artifact@v4
               with:
                 name: next-project
 
