--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: next-project
-                path: /.
+                path: .
             
             - name: Download Artifact 
               uses: actions/download-artifact@v4
