--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: next-project
-                path: .../repo.zip
+                path: repo.zip
             
             - name: Download Artifact 
               uses: actions/download-artifact@v4
