--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,10 @@ jobs:
             - name: Deploying to EC2
               uses: appleboy/scp-action@v0.1.7
               with:
-                host: ${{ secrets.SSH_HOST }}
-                username: ${{ secrets.SSH_USER}}
-                key: ${{ secrets.SSH_PRIVATE_KEY}}
-                port: 22
+                host: ${{ secrets.HOST }}
+                username: ${{ secrets.USERNAME }}
+                port: ${{ secrets.PORT }}
+                key: ${{ secrets.KEY }}
                 source: /home/runner/work/next-repo/next-repo/repo.zip
                 target: /home/ec2-user/
             
