Deploy Sac Catania

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
                      cd next-app
                      npm install
                      pm2 start npm --name nextjs-app -- run start -- -p 3000
-                     npm next build
+                     npx next build
                      npx next start
                      sudo systemctl restart nginx 
 
