--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,19 @@ jobs:
                 name: next-project
 
 
+            - name: Commands on EC2
+              uses: appleboy/ssh-action@v1.0.3
+              with:
+                host: ${{ secrets.HOST }}
+                username:  ${{ secrets.USERNAME }}
+                key: ${{ secrets.KEY }}
+                port: ${{ secrets.SSH_PORT }}
+                script: |
+                    cd /home/ec2-user/
+                    sudo rm -r next-app
+                    rm repo.zip
+
+
             - name: Deploying to EC2
               uses: appleboy/scp-action@v0.1.7
               with:
@@ -54,7 +67,7 @@ jobs:
                      pm2 start npm --name nextjs-app -- run start -- -p 3000
                      npx next build
                      npx next start
-                     sudo systemctl restart nginx 
+                     sudo systemctl restart nginx   
 
 
                 
