--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,10 +64,9 @@ jobs:
                      cd /home/ec2-user/
                      unzip repo.zip -d /home/ec2-user/next-app 
                      cd next-app
-                     npm install
-                     pm2 start npm --name nextjs-app -- run start -- -p 3000
+                     npx yarn install
                      npx next build
-                     npx next start
+                     pm2 start npm --name nextjs-app -- start
                      sudo systemctl restart nginx   
 
 
